@@ -16,16 +16,17 @@
     with this program; if not, write to the Free Software Foundation, Inc.,
     51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA.
 """
-
 import os
+import time
 import hashlib
 import urlparse
 
-from pyrocore.scripts.base import ScriptBase
+from pyrocore.scripts.base import ScriptBase, ScriptBaseWithConfig
+from pyrocore import config, error
 from pyrocore.util import bencode, metafile
 
 
-class MetafileChanger(ScriptBase):
+class MetafileChanger(ScriptBaseWithConfig):
     """ Change attributes of a bittorrent metafile.
     """
 
@@ -39,12 +40,12 @@ class MetafileChanger(ScriptBase):
     def add_options(self):
         """ Add program options.
         """
+        super(MetafileChanger, self).add_options()
+
         self.add_bool_option("-n", "--dry-run",
             help="don't write changes to disk, just tell what would happen")
         self.add_bool_option("--no-skip",
             help="do not skip broken metafiles that fail the integrity check")
-        self.add_bool_option("-F", "--force",
-            help="change all metafiles given on the command line, regardless of current announce URL")
         self.add_bool_option("-p", "--make-private",
             help="make torrent private (DHT/PEX disabled)")
         self.add_bool_option("-P", "--make-public",
@@ -59,21 +60,31 @@ class MetafileChanger(ScriptBase):
         ##self.add_value_option("-T", "--tracker", "DOMAIN",
         ##    help="filter given torrents for a tracker domain")
         self.add_value_option("-a", "--reannounce", "URL",
-            help="set a new announce URL")
+            help="set a new announce URL, but only if the old announce URL matches the new one")
+        self.add_value_option("--reannounce-all", "URL",
+            help="set a new announce URL on ALL given metafiles")
         self.add_bool_option("--no-cross-seed",
-            help="do not add a non-standard field to the info dict ensuring unique info hashes")
+            help="when changing the announce URL, do not add a non-standard field to the info dict ensuring unique info hashes")
+        self.add_value_option("--comment", "TEXT",
+            help="set a new comment (an empty value deletes it)")
+        self.add_bool_option("--bump-date",
+            help="set the creation date to right now")
+        self.add_bool_option("--no-date",
+            help="remove the 'creation date' field")
 
 
     def mainloop(self):
         """ The main loop.
         """
         if not self.args:
-            self.parser.print_help()
-            self.parser.exit()
+            self.parser.error("No metafiles given, nothing to do!")
+
+        if self.options.reannounce and self.options.reannounce_all:
+            self.parser.error("Confliction options --reannounce and --reannounce-all!")
 
         # Set filter criteria for metafiles
         filter_url_prefix = None
-        if self.options.reannounce and not self.options.force:
+        if self.options.reannounce:
             # <scheme>://<netloc>/<path>?<query>
             filter_url_prefix = urlparse.urlsplit(self.options.reannounce, allow_fragments=False)
             filter_url_prefix = urlparse.urlunsplit((
@@ -81,16 +92,28 @@ class MetafileChanger(ScriptBase):
             ))
             self.LOG.info("Filtering for metafiles with announce URL prefix %r..." % filter_url_prefix)
 
+        if self.options.reannounce_all:
+            self.options.reannounce = self.options.reannounce_all
+
+        # Resolve tracker alias, if URL doesn't look like an URL
+        if self.options.reannounce and not urlparse.urlparse(self.options.reannounce).scheme:
+            try:
+                _, tracker_url = config.lookup_announce_alias(self.options.reannounce)
+            except (KeyError, IndexError):
+                raise error.UserError("Unknown tracker alias or bogus URL %r!" % (self.options.reannounce,))
+            else:
+                self.options.reannounce = tracker_url[0]
+
         # go through given files
         bad = 0
         changed = 0
         for filename in self.args:
             try:
-                # read and remember current content
+                # Read and remember current content
                 metainfo = bencode.bread(filename)
                 old_metainfo = bencode.bencode(metainfo)
             except (KeyError, bencode.BencodeError), exc:
-                self.LOG.warning("Bad metafile %r (%s: %s)" % (filename, type(exc).__name__, exc))
+                self.LOG.warning("Skipping bad metafile %r (%s: %s)" % (filename, type(exc).__name__, exc))
                 bad += 1
             else:
                 # Check metafile integrity
@@ -101,7 +124,7 @@ class MetafileChanger(ScriptBase):
                     if not self.options.no_skip:
                         continue
                 
-                # Skip any metafile that don't meet the pre-conditions
+                # Skip any metafiles that don't meet the pre-conditions
                 if filter_url_prefix and not metainfo['announce'].startswith(filter_url_prefix):
                     self.LOG.warn("Skipping metafile %r no tracked by %r!" % (filename, filter_url_prefix,))
                     continue
@@ -132,6 +155,17 @@ class MetafileChanger(ScriptBase):
                     if not self.options.no_cross_seed:
                         # Enforce unique hash per tracker
                         metainfo["info"]["x_cross_seed"] = hashlib.md5(self.options.reannounce).hexdigest()
+
+                # Change comment or creation date?
+                if self.options.comment is not None:
+                    if self.options.comment:
+                        metainfo["comment"] = self.options.comment
+                    elif "comment" in metainfo:
+                        del metainfo["comment"]
+                if self.options.bump_date:
+                    metainfo["creation date"] = long(time.time())
+                if self.options.no_date and "creation date" in metainfo:
+                    del metainfo["creation date"]
 
                 # Write new metafile, if changed
                 new_metainfo = bencode.bencode(metainfo)
